--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
           
-    <title>Brendan Tuckerman</title>
+    <title>Brendan Tuckerman | Portfolio</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="grid grid-cols-2 h-screen justify-center items-center"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
