--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Brendan Tuckerman | Portfolio</title>
   </head>
   <body>
-    <div id="app" class="grid grid-cols-2 h-screen justify-center items-center"></div>
+    <div id="app" class="grid grid-cols-1 sm:grid-cols-2 h-screen justify-center items-center"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
